--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# PostgreSQL
 spring.application.name=proceedings-management
+spring.datasource.url=jdbc:postgresql://localhost:5432/proceedings
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+
+# Custom properties for RabbitMQ
+rabbitmq.queue=proceedingsInitiationQueue
+rabbitmq.exchange=proceedingsExchange
+rabbitmq.routingkey=proceedings.key
