Testing and error handling. Final commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.rabbitmq.password=password
 # Custom properties for RabbitMQ
 rabbitmq.queue=proceedingsInitiationQueue
 rabbitmq.exchange=proceedingsExchange
-rabbitmq.routingkey=proceedings.key
+rabbitmq.routingkey=proceedings.email.send
